fixed background (sorta)
maybe github pages is just taking too long

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
     margin-right: 2vw;
     margin-left: 2vw;
     background-image: url(images/stars.jpg);
+    background-color: black;
 }
 
 h1 {
